# ledcontrol

./: .clang-format  .gitmodules  .travis.yml  CMakeLists.txt
pcb/: pcb.fzz
src/: CMakeLists.txt  led.c  led.h  main.c  uart.c  uart.h
src/controller/: CMakeLists.txt  config.h.in  fade.h  led.c  light.c  light.h  main.c  pwm.c  pwm.h  uart.c  uart.h
src/homebridge/: index.js  package.json
src/pcb/: pcb.fzz
